<resources>
    <string name="app_name">KinopoiskAPI</string>
    <string name="like">Like:</string>
    <string name="kp">KP:</string>
    <string name="imdb">IMDB:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="trailername">TrailerName</string>
    <string name="Favourites">Избраное</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_favourites">Favourites</string>
    <string name="Settings">Настройки</string>
    <string name="DarkModeOn">Ночной режим включен</string>
    <string name="DarkButtonOff">Ночной режим выключен</string>
    <string name="DarkButtonAuto">Ночной режим системный</string>
    <string name="darkModeTV">Настройки темной темы:</string>
    <string name="api_kinopoisk">Ввод токена для работы API Kinopoisk</string>
    <string name="enterToken">Введите ваш токен</string>
    <string name="submit">Подтвердить</string>
    <string name="warningNote">Введите ваш персональный токен в настройках или нажмите на кнопку Гостевой токен</string>
    <string name="guestToken">Гостевой токен</string>
</resources>