<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        style="@style/MyBottomNavigationView"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"
        tools:ignore="MissingConstraints" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/PosterId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/DetailedTitleId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PosterId" />

            <com.example.kinopoiskapi.presentation.views.FavouriteView
                android:id="@+id/cvSmile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                app:faceColor="@color/neutral"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PosterId"
                app:linesColor="@color/black"
                app:tongueColor="@color/red" />

            <TextView
                android:id="@+id/DetailedYearId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/year"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/DetailedTitleId" />

            <TextView
                android:id="@+id/IMDB"
                style="@style/TextAppearance.Rating"
                android:paddingTop="7dp"
                android:text="@string/imdb"
                android:textAppearance="?attr/textAppearancePopupMenuHeader"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/DetailedYearId" />

            <TextView
                android:id="@+id/textViewRatingIMDB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/IMDB"
                app:layout_constraintTop_toBottomOf="@id/DetailedYearId"
                tools:background="@drawable/rating_green"
                tools:text="8.0" />

            <TextView
                android:id="@+id/KP"
                style="@style/TextAppearance.Rating"
                android:paddingTop="7dp"
                android:text="@string/kp"
                android:textAppearance="?attr/textAppearancePopupMenuHeader"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/textViewRatingIMDB"
                app:layout_constraintTop_toBottomOf="@id/DetailedYearId" />

            <TextView
                android:id="@+id/textViewRatingKP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/KP"
                app:layout_constraintTop_toBottomOf="@id/DetailedYearId"
                tools:background="@drawable/rating_green"
                tools:text="8.0" />

            <TextView
                android:id="@+id/DetailedDescriptionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/description"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/IMDB" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trailerRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/DetailedDescriptionId"
                tools:ignore="MissingConstraints"
                tools:listitem="@layout/trailer_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

